--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -9,6 +9,16 @@ body {
   color:#B2FF00;;
 }
 
+.form-add .components {
+	display: inline-flex;
+	width: 100%;
+}
+.form-add .components #html {
+	width:50%;
+}
+.form-add .components #viewer {
+	width:50%;
+}
 .form-area {
   width: 300px;
   border: 1px solid #B2FF00;
@@ -118,8 +128,6 @@ input[type="submit"]:hover {
 }
 
 .form-add {
-
-margin: 50px;
 padding: 35px;
 }
 .form-add .form-add-description input[type="text"] {
@@ -132,7 +140,7 @@ padding: 35px;
 .form-add textarea {
 display: inline-flex;
 width: 29%;
-height: 30vh;
+height: 50vh;
 margin: 1.25em;
 }
 .form-add input[type="submit"] {
@@ -195,10 +203,11 @@ td {
 }
 
 .full-container textarea {
-	margin:1.25em;
-	width:30%;
-	height:30vh;
+	margin: 1.25em;
+	width: 45%;
+	height: 70vh;
 }
+
 .halfest-container {
 	margin: 1.25em;
 	width: 30%;
@@ -206,12 +215,7 @@ td {
 	border:2px solid #B2FF00;
 	border-radius: 24px;
 }
+
 .full-container .view {
-  margin-top:50px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  
+  padding: 50px;
 }
